// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Headings > should render correctly (snapshot) 1`] = `
<div>
  <h1
    class="ant-typography mdx-heading dark:text-light _heading_a87fd0 _h1_a87fd0"
  >
    Heading
  </h1>
</div>
`;

exports[`Headings > should render correctly (snapshot) 2`] = `
<div>
  <h2
    class="ant-typography mdx-heading dark:text-light _heading_a87fd0 _h2_a87fd0"
  >
    Heading
  </h2>
</div>
`;

exports[`Headings > should render correctly (snapshot) 3`] = `
<div>
  <h3
    class="ant-typography mdx-heading dark:text-light _heading_a87fd0 _h3_a87fd0"
  >
    Heading
  </h3>
</div>
`;

exports[`Headings > should render correctly (snapshot) 4`] = `
<div>
  <h4
    class="ant-typography mdx-heading dark:text-light _heading_a87fd0 _h4_a87fd0"
  >
    Heading
  </h4>
</div>
`;

exports[`Headings > should render correctly (snapshot) 5`] = `
<div>
  <h5
    class="ant-typography mdx-heading dark:text-light _heading_a87fd0 _h5_a87fd0"
  >
    Heading
  </h5>
</div>
`;

exports[`Headings > should render correctly (snapshot) 6`] = `
<div>
  <h5
    class="ant-typography mdx-heading dark:text-light _heading_a87fd0 _h6_a87fd0"
  >
    Heading
  </h5>
</div>
`;
